# fuel-dao-nft-rs

./: .gitignore  Cargo.toml  README.md  argument  dfx.json
scripts/: candid_generator.sh  deploy_ledger_canister.sh  upload_asset_wasm.sh  upload_token_wasm.sh
src/asset_proxy/: Cargo.toml
src/asset_proxy/src/: asset.rs  evidence.rs  lib.rs  state_machine.rs  store_state.rs
src/fuel-dao-nft-rs-backend/: Cargo.toml
src/fueldao/: Cargo.toml
src/fueldao/src/: lib.rs
src/provision/: can.did
src/provision/src/: state.rs
src/provision/src/canisters/: asset_permission.rs  asset_proxy_canister.rs  assets.rs  mod.rs  token.rs
src/provision/src/collection/: collection_config.rs  collection_request.rs
src/shared_utils/: Cargo.toml
src/shared_utils/src/: wasm.rs
src/token/: Cargo.toml  Readme  can.did
src/token/src/: lib.rs  ports.rs
src/token/src/state/: account_identifier.rs  escrow.rs  icrc7.rs  metadata.rs  mod.rs  models.rs  service.rs  state.rs  subaccount.rs  token.rs
wasm/token/: can.did
