[workspace]
members = [ "src/asset_proxy",
    "src/fueldao"
, "src/provision", "src/shared_utils", "src/token"]
resolver = "2"


[workspace.dependencies]
candid = "0.10.2"
ciborium = "0.2.1"
serde = "1.0.186"
serde_json = "1.0.113"
shared_utils = { path = "./src/shared_utils" }
ic-stable-structures = "0.6.2"
