[package]
name = "asset_proxy"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
candid = "0.10"
ic-cdk = "0.16"
ic-cdk-macros = "0.16.0"
serde = { version = "1.0", features = ["derive"] }
base64 = "*"
ic-certification = "2.6.0"
ic-representation-independent-hash = "2.6.0"
sha2 = "0.10.8"
itertools = "0.13.0"
serde_bytes = "0.11.15"
num-traits = "0.2.19"
hex = "0.4.3"
serde_cbor = "0.11.2"
